# flake8-pyspark-collect

./: LICENSE  README.md  azure-pipelines.yml  flake8_collect.py  setup.cfg
tests/: flake8_collect_test.py
