[metadata]
name = flake8_pyspark_collect
version = 0.1.0
description = flake8 plugin which forbids DataFrame.collect()
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/christophergrant/flake8-pyspark-collect
author = Christopher Grant
author_email = chris.grant@databricks.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = flake8_pyspark_collect
install_requires =
    flake8>=5.0
python_requires = >=3.10

[options.entry_points]
flake8.extension =
    MAT=flake8_match:Plugin

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
